# redox

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LOGGING_IMPROVEMENTS.md  README.md  TCP_DEBUG_FINDINGS.md  aarch64-redox-none.json  aarch64-unknown-redox-clif.json  build-coreutils.one-tool.sh  build-coreutils.sh  build-cranelift.sh  build-initfs.sh  build-ld-so.sh  build-msh.sh  build-nushell.sh  build-pure-rust-iso.sh  build-rustc-core.sh  build-rustc-redox.sh  build-smolnetd.sh  build-virtio-9pd.sh  git-all.sh  initrc  ion_source  mount-redox-mount.sh  mount.sh  notes.md  patch_ovmf_timeout.py  post-hoc.md  redoxfs  release.sh  run-auto-login.sh  run-backup.sh  run-dev.sh  rust-toolchain.toml  shell_expand.rs  smolnetd-last-good-01-12-1247  stamp-and-mount.sh  stamp.sh  start.sh  (+9 more)
.cargo/: config.toml
.claude/: CLAUDE.md  settings.local.json
cargo-lite/: Cargo.toml  build-for-redox.sh  cargo-lite-redox
cargo-lite/src/: main.rs
config/: kaa.toml  net.toml  server.toml
denovo/: PLAN.md  TODO.md  build-denovo.sh  build-packages.sh  run-denovo.sh
mini-shell/: Cargo.toml
notes/: IRQ_interupts_polling.md  acceleration.md  binaries.md  caveats.md  channel.md  clone.md  cranelift-varargs-bug.md  curl-status.md  custom-tools.md  denovo.md  execution.md  fbcond-gui-debug.md  fixed.md  gui-debug-builds.md  incremental-builds.md  ion.md  ld-so-debugging-saga.md  networking.md  notes.md  open-mode-fix-status.md  orbital-build.md  orbital-fix.md  performance-tuning-findings.md  post-hoc.md  rustc-on-redox.md  self.md  simple-coreutils.md  slow-exec.md  speed.md  (+7 more)
(+647 files in other folders)
